infra/argo-workflows/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
